# 3D-TAME

./: .gitignore  README.md  SETUP.md  TODO.md  pyproject.toml  requirements.txt  scratch.ipynb  setup.py
cnn-interpretability/: datasets.py  interpretation.py  models.py  train_tame.ipynb  utils.py
configs/: default.yaml  resnet_tame.yaml  vgg16_tame.yaml  vit_b_16.yaml
jupyter notebooks/: vgg_road.ipynb
medical_transformers/: classification.py  params.json  train_tame.ipynb
medical_transformers/defaults/: models.py  trainer.py  transformers.py  wrappers.py
old_configs/: vit_b_16.yaml
pl scripts/: vit_b_16_compiled_ddp_v1.py
pl_configs/: auto.yaml  default.yaml  resnet50_tame.yaml  resnet50_tame_ddp.yaml  vit_b_16_tame_ddp.yaml
pl_scripts/: TAME_resnet50_SANITYCHECK.py  TAME_vgg16_SANITYCHECK.py  TAME_vit_SANITYCHECK.py  eval_test.py  fix_checkpoint_example.py  lcam_resnet_single.py  lcam_vit_single.py  resnet_TAME_single.py  resnet_TAttentionV3_single.py  resnet_reproduce.py  v1_1.py  v2_1.py  v2_1_NM.py  v2_1_sam.py  v2_2.py  v3.py  v3_MM.py  v3_resnet_single.py  v3_sam.py  v3_vit_bn.py  v3_vit_ln.py  v3_vit_single.py  vgg_TAME_single_oldnorm.py  vgg_TAttentionV3_single.py  vgg_TAttentionV3_single_oldnorm.py  vit_TAME_noskip.py  vit_TAME_othereval.py  vit_TAME_print_mask.py  vit_TAME_single.py  vit_TAttentionV3_single.py  vit_b_16_ddp_v1.py  vit_b_16_ddp_v1_t.py  vit_b_16_ddp_v2.py  vit_gradcam.py  vit_hila.py  vtame.py  vtame_resnet.py  vtame_resnet_eval_test.py  vtame_resnet_single.py  vtame_resnet_single_old.py  (+2 more)
pl_scripts/old scripts/: eval_test.py  lcam_vit_single.py  resnet_reproduce.py  tame_vgg16_reproduce.py  v1.py  v1_1.py  v1_2.py  v2.py  v2_1.py  v2_2.py  v3.py  v3_MM.py  v3_resnet_single.py  v3_sam.py  v3_vgg_single.py  vtame_MM.py  vtame_resnet.py  vtame_resnet_eval_test.py  vtame_resnet_single.py  vtame_resnet_single_old.py  vtame_resnet_single_old_eval_only.py  vtame_vgg_single.py
pl_scripts/ran/: lcam_resnet_single.py  lcam_vit_b_16_oldnorm.py  resnet_TAME_single_oldnorm.py  resnet_TAttentionV3_single.py  resnet_ablationcam.py  vgg_TAME_single.py  vgg_TAttentionV3_single.py  vgg_TAttentionV3_single_oldnorm.py  vgg_ablationcam.py  vgg_gradcam.py  vit_TAME_single.py  (+10 more)
scripts/: eval_script.py  masked_print.py  train_script.py
src/: gen_trainlist.py  lr_finder.py  masked_print.py  model_inspector.py  old_train.py  other_methods_vit.py  scripts.py  train.py  transformer_explainability_val.py  val.py
tame/: TODO.md  __init__.py  eval.py  lr_finder.py  other_methods.py  other_methods_vit.py  plot_lr.py  train.py  transformer_explainability_val.py  val.py
tame.egg-info/: PKG-INFO  SOURCES.txt
utilities/: composite_models.py  pyproject.toml
(+55 files in other folders)
