[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tame"
version = "0.0.1"
dependencies = [
    "matplotlib",
    'numpy',
    "opencv_python",
    "Pillow",
    "scikit_learn",
    "torch",
    "torchvision",
    "tqdm",
    "pyyaml",
    "pandas",
    "einops",
    "grad-cam",
    "timm",
    "typing_extensions"
]

[project.scripts]
"tame" = "scripts:main"
"tame-auto" = "train:cli_main"