[tool.poetry]
name = "tame"
version = "0.1.0"
description = ""
authors = [
    "marios1861 <44480600+marios1861@users.noreply.github.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
opencv-python = "^4.8.0.76"
Pillow = "^9.5.0"
scikit-learn = "^1.2.2"
torch = ">=2.0.0, !=2.0.1"
torchvision = "^0.15.1"
tqdm = "^4.65.0"
PyYAML = "^6.0"
pandas = "^2.0.0"
lightning = "^2.0.1.post0"
grad-cam = "^1.4.6"
torchmetrics = "^0.11.4"
einops = "^0.6.1"
fastapi  = ">0.80"
tensorboard = "^2.12.2"
timm = "^0.6.13"
jsonargparse = {extras = ["signatures"], version = "^4.21.0"}
python-dotenv = "^1.0.0"
torchshow = "^0.5.1"
nibabel = "^5.1.0"
wandb = "^0.16.0"
umap-learn = {extras = ["plot"], version = "^0.5.4"}
h5py = "^3.10.0"
tabulate = "^0.9.0"
easydict = "^1.10"
pandas-profiling = "^3.6.6"
ffmpeg-python = "^0.2.0"
ipykernel = "^6.25.0"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
jupyter-nbextensions-configurator = "^0.6.3"

[tool.poetry.scripts]
tame = 'tame.scripts:main'
tame-auto = 'tame.train:cli_main'

[tool.poetry.group.dev.dependencies]
torch-tb-profiler = "^0.4.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
